# flexible-mcp-crawl4ai-rag

./: .dockerignore  .env.example  .gitignore  DOCKER_USAGE.md  Dockerfile  PLANNING.md  README.md  TASK.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2da3a45566c4_initial_migration.py  c39dbe1f87f7_configurable_embedding_dimension_support.py
initdb/: crawled_pages.sql.in  init.sh
src/: crawl4ai_mcp.py  reembed_documents.py  utils.py
src/crawler/: __init__.py  metadata_extractor.py  postgres_client.py  tool_definitions.py  web_crawler.py
tests/: debug_similarity_test.py  test_contextual_embeddings.py  test_rag_retrieval_accuracy.py  test_utils.py
tests/crawler/: test_web_crawler_chunking.py
